--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -3,3 +3,32 @@
 .navbar {
   margin-bottom: 20px;
 }
+
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #fdfdfd;
+  color: #111;
+}
+
+header {
+  background: black;
+  color: white;
+  padding: 1em;
+}
+
+nav ul {
+  display: flex;
+  gap: 1em;
+  list-style: none;
+}
+
+section {
+  padding: 2em;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
